# 2024-UNSW-HandBook

./: .gitignore  LICENSE  README.md
backend/src/data/loader/: Cargo.toml  error.md  matching_pattern.md
backend/src/data/loader/doc/: all.html  fn.test_io.html  index.html  sidebar-items.js  struct.HandbookDataInterface.html  struct.JsCourseInfo.html  struct.JsProgramInfo.html  struct.JsProgramStructure.html  struct.JsSpecialisationInfo.html
backend/src/data/loader/doc/course/: enum.ExclusionCondition.html  index.html  sidebar-items.js  struct.Course.html  struct.CourseManager.html
backend/src/data/loader/doc/program/: enum.Course.html  enum.Rules.html  enum.SpecialisationType.html  index.html  sidebar-items.js  struct.AlternativeCourse.html  struct.Constraints.html  struct.CourseComponent.html  struct.InfoRule.html  struct.Program.html  struct.ProgramComponentBuilder.html  struct.ProgramManager.html  struct.Specialisation.html  struct.SpecialisationComponent.html  struct.SpecialisationView.html  trait.Builder.html
backend/src/data/loader/doc/requirements/: enum.Bracket.html  enum.Code.html  enum.Keyword.html  enum.Operator.html  enum.Preposition.html  enum.Token.html  index.html  sidebar-items.js  struct.BinaryNode.html  struct.CodeNode.html  struct.ListNode.html  struct.Requirements.html  struct.TextNode.html  struct.UOCAtLevelNode.html  (+4 more)
backend/src/data/loader/pkg/: loader.d.ts  loader.js  loader_bg.js  loader_bg.wasm  loader_bg.wasm.d.ts  package.json
backend/src/data/loader/src/: course.rs  libs.rs  main.rs  program.rs  requirements.rs  search.rs  utlis.rs
(+177 files in other folders)
