[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/libs.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
rayon = "1.8.0"
serde = {version = "1.0.193",  features = ["derive"]}
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
tsify = "0.4.5"
wasm-bindgen = "0.2.89"
wasm-bindgen-rayon = "1.2"


